[gd_scene load_steps=3 format=3 uid="uid://cpg6qo6jbi8eh"]

[ext_resource type="Script" path="res://addons/EasyMenus/Scripts/gameover_menu.gd" id="1_neur0"]
[ext_resource type="PackedScene" uid="uid://qlskttl1wjr7" path="res://addons/EasyMenus/Scenes/options_menu.tscn" id="2_wvcgl"]

[node name="GameoverMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_neur0")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="GameoverMenuLabel" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Game over"
horizontal_alignment = 1

[node name="Score" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Score : 0"
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "HighScore : 0"
horizontal_alignment = 1

[node name="Coins" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Coins: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="RetryGameButton" type="Button" parent="Content"]
unique_name_in_owner = true
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Retry"

[node name="OptionsButton" type="Button" parent="Content"]
visible = false
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Options"

[node name="BackToMenuButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Back to Main Menu"

[node name="QuitButton" type="Button" parent="Content"]
custom_minimum_size = Vector2(350, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 30
text = "Quit"

[node name="OptionsMenu" parent="." instance=ExtResource("2_wvcgl")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[connection signal="restart_game_pressed" from="." to="." method="_on_restart_game_pressed"]
[connection signal="pressed" from="Content/RetryGameButton" to="." method="_on_retry_game_button_pressed"]
[connection signal="pressed" from="Content/RetryGameButton" to="." method="_on_resume_game_button_pressed"]
[connection signal="pressed" from="Content/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Content/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="Content/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="close" from="OptionsMenu" to="." method="_on_options_menu_close"]
